@@ -3,7 +3,7 @@
 /*
    Copyright (c) 2008 Broad Institute / Massachusetts Institute of Technology
                  2011, 2012 Attractive Chaos <attractor@live.co.uk>
-   Copyright (C) 2009, 2013, 2014 Genome Research Ltd
+   Copyright (C) 2009, 2013, 2014,2017 Genome Research Ltd
 
    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
@@ -343,28 +343,60 @@ typedef struct __kstring_t {
      */
     int bgzf_index_build_init(BGZF *fp);
 
+    /// Load BGZF index
     /**
-     * Load BGZF index
-     *
      * @param fp          BGZF file handler
      * @param bname       base name
      * @param suffix      suffix to add to bname (can be NULL)
-     *
-     * Returns 0 on success and -1 on error.
+     * @return 0 on success and -1 on error.
      */
-    int bgzf_index_load(BGZF *fp, const char *bname, const char *suffix);
+    int bgzf_index_load(BGZF *fp,
+                        const char *bname, const char *suffix) HTS_RESULT_USED;
 
+    /// Load BGZF index from an hFILE
     /**
-     * Save BGZF index
+     * @param fp   BGZF file handle
+     * @param idx  hFILE to read from
+     * @param name file name (for error reporting only; can be NULL)
+     * @return 0 on success and -1 on error.
      *
+     * Populates @p fp with index data read from the hFILE handle @p idx.
+     * The file pointer to @idx should point to the start of the index
+     * data when this function is called.
+     *
+     * The file name can optionally be passed in the @p name parameter.  This
+     * is only used for printing error messages; if NULL the word "index" is
+     * used instead.
+     */
+    int bgzf_index_load_hfile(BGZF *fp, struct hFILE *idx,
+                              const char *name) HTS_RESULT_USED;
+
+    /// Save BGZF index
+    /**
      * @param fp          BGZF file handler
      * @param bname       base name
      * @param suffix      suffix to add to bname (can be NULL)
-     *
-     * Returns 0 on success and -1 on error.
+     * @return 0 on success and -1 on error.
      */
     int bgzf_index_dump(BGZF *fp,
                         const char *bname, const char *suffix) HTS_RESULT_USED;
+
+    /// Write a BGZF index to an hFILE
+    /**
+     * @param fp     BGZF file handle
+     * @param idx    hFILE to write to
+     * @param name   file name (for error reporting only, can be NULL)
+     * @return 0 on success and -1 on error.
+     *
+     * Write index data from @p fp to the file @p idx.
+     *
+     * The file name can optionally be passed in the @p name parameter.  This
+     * is only used for printing error messages; if NULL the word "index" is
+     * used instead.
+     */
+
+    int bgzf_index_dump_hfile(BGZF *fp, struct hFILE *idx,
+                              const char *name) HTS_RESULT_USED;
 
 #ifdef __cplusplus
 }
